# hello-kubernetes

./: .gitignore  LICENSE  README.md  build-and-push-images.sh  build-images.sh  build-local-images.sh  ingress.yml  kustom-overlay.yml  kustomization.yml
backend-golang/: Dockerfile  backend-golang.go  kubernetes.yml
backend-golang/src/: go.mod  http-handler.go  http-logger.go  http-server.go  main.go  redis-client.go
backend-rust/: Cargo.toml  Dockerfile  kubernetes.yml
backend-rust/src/: http_server.rs  main.rs  redis_client.rs
backend-spring/: Dockerfile  build.gradle  kubernetes.yml  settings.gradle
backend-spring/src/main/java/com/example/hello/: HelloController.java  JerseyConfig.java  RedisClient.java  RedisConfig.java
backend-spring/src/main/resources/: application.properties
frontend-nodejs/: Dockerfile  frontend-nodejs.js  frontend-nodejs.ts  kubernetes.yml  kustomization.yml  package.json  tsconfig.json
kustomize/base/: kustomization.yml
kustomize/blue/: kustomization.yml
kustomize/green/: kustomization.yml
redis/: kubernetes.yml
