[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
env_logger = "0.11.6"
log = "0.4.25"
r2d2 = "0.8.10"
redis = { version = "0.28.2", features = ["r2d2"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
